fixed spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,6 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     $black: #1A2428;
 
 //mixins 
-
 @mixin flexStyle($display, $flexDirection, $justifyContent, $alignItems) {
     display: $display;
     flex-direction: $flexDirection;
@@ -47,8 +46,6 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     font-weight: $fontWeight;
 }
 
-//check if this mixin is necessary//
-
 @mixin textStyling($letterSpacing, $lineHeight, $textTransform, $textDeco) {
     letter-spacing: $letterSpacing;
     line-height: $lineHeight;
@@ -69,7 +66,6 @@ html {
 }
 
 //reusable code//
-
 .wrapper {
     max-width: 1200px;
     @include boxModel(90%, auto, 5rem 0, none, none, 0 auto);
@@ -160,33 +156,29 @@ button {
     font-weight: 600;
 }
 
-//nagivation section//
+.flexRow {
+    @include flexStyle(flex, row, space-between, center);
+}
 
+//nagivation section//
 header nav {
     height: 10vh;
     position: relative;
     @include colors($white, 0, 0 0 8px rgba(0, 0, 0, 0.25));
-    @include flexStyle(flex, 0, 0, center);
-    .wrapper {
-        @include flexStyle(flex, 0, space-between, center);
-        ul {
-            @include flexStyle(flex, 0 , space-between, center);
+    .wrapper ul {
             text-transform: uppercase;
-            font-weight: 600;
+            font-weight: 600;      
             li {
                 margin-left: 2rem;
                 svg {
                     all: revert;
                     width: 1.75rem;
                 }
-
             }
-        }
-    }
+    } 
 }
 
 //header section//
-
 header {
     height: 100vh;
 }
@@ -199,11 +191,7 @@ header {
 }
 
 .hero {
-    @include flexStyle(flex, row, space-between, center);
     height: 90vh;
-    .wrapper {
-        @include flexStyle(flex, row, space-between, center);
-    }
     .textContainer {
         padding-right: 2rem;
         h1 {
@@ -216,12 +204,9 @@ header {
     }
 }
 
-
-
 //about section//
-
 .about .wrapper {
-    @include flexStyle(flex, 0, space-between, 0);
+    align-items: flex-start;
     .textContainer {
         h2 {
             @include fontStyling(0, 1.25rem, 0);
@@ -253,12 +238,9 @@ header {
 }
 
 //shop section//
-
 .shop .wrapper {
         @include flexStyle(flex, column, space-between, center);
-        .productGallery {
-            @include flexStyle(flex, row, space-between, center);
-            li {
+        .productGallery li {
                 max-width: 24%;
                 margin-bottom: 3rem;
                 position: relative;
@@ -286,8 +268,8 @@ header {
         .shopBtn {
             margin-top: 3rem;
         }
-    }
 }
+
 
 //gallery section//
 .gallery {
@@ -299,14 +281,12 @@ header {
         .mainGallery {
             padding: 2rem 0 4rem 0;
             .col2 {
-                @include flexStyle(flex, row, space-between, center);
                 li {
                     width: calc(50% - 5px);
                     margin: 5px;
                 }
             }
             .col3 {
-                @include flexStyle(flex, row, space-between, center);
                 li {
                     width: calc((100% / 3) - 5px);
                     margin: 0 5px;
@@ -323,7 +303,6 @@ header {
     .wrapper {
         @include flexStyle(flex, column, center, center);
         ul {
-            @include flexStyle(flex, row, space-between, center);
             .blogPost {
                 @include colors($white, $black, 0 5px 8px rgba(0, 0, 0, 0.3));
                 @include boxModel(32%, auto, 1rem, none, 6px, none);
@@ -341,64 +320,59 @@ header {
         }
     }
 }
-//footer section//
 
+//footer section//
 footer {
     background-image: url(../assets/cow.png);
     @include bgImgStyling(bottom, contain, no-repeat);
-    .wrapper {
-        @include flexStyle(flex, row, space-between, 0);
-        .footerCol {
-            @include flexStyle(flex, column, space-between, 0);
-            width: 25%;
-            height: 42vh;
-            h3 {
-                padding-bottom: 2rem;
-                @include textStyling(0.075rem, 1.5rem, 0, none);
+    .footerCol {
+        @include flexStyle(flex, column, space-between, 0);
+        width: 25%;
+        height: 42vh;
+        h3 {
+            padding-bottom: 2rem;
+            @include textStyling(0.075rem, 1.5rem, 0, none);
+        }
+    }
+    .first {
+        padding-right: 2rem;
+        img {
+            width: 40%;
+            filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);            
+            }
+        nav ul {
+                @include flexStyle(flex, row, space-between, center);                    width: 65%;
+            }
+    }
+    .second {
+        padding-left: 1rem;
+        nav ul {
+                @include flexStyle(flex, column, space-between, 0);
+                height: 100%;
             }
         }
-        .first {
-            padding-right: 2rem;
-            img {
-                width: 40%;
-                filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);            
+    .third li {
+        .imageContainer {
+            width: calc(100% / 3);
             }
-            nav ul {
-                    @include flexStyle(flex, row, space-between, center);
-                    width: 60%;
-            }
-        }
-        .second {
+        .textContainer {
+            width: 75%;
             padding-left: 1rem;
-            nav ul {
-                    @include flexStyle(flex, column, space-between, 0);
-                    height: 100%;
-                }
-            }
-        .third li {
-            @include flexStyle(flex, row, space-between, 0);
-            .imageContainer {
-                width: calc(100% / 3);
-                }
-            .textContainer {
-                width: 75%;
-                padding-left: 1rem;
-                @include flexStyle(flex, column, space-evenly, 0);
-                .item {
-                    @include fontStyling($secondaryFont, 0.8rem, 600);
-                    @include textStyling( 0, 0, 0rem, none);
-                }
+            @include flexStyle(flex, column, space-evenly, 0);
+            .item {
+                @include fontStyling($secondaryFont, 0.8rem, 600);
+                @include textStyling( 0, 0, 0rem, none);
             }
         }
-        .fourth {
-            padding-left: 1.7rem;
-            form {
-                padding-top: 0.5rem;
+    }
+    .fourth {
+        padding-left: 1.7rem;
+        form {
+            padding-top: 0.5rem;
+            width: 100%;
+            input[type=text] {
                 width: 100%;
-                input[type=text] {
-                    width: 100%;
-                    padding: 0.5rem 1rem;
-                }
+                padding: 0.5rem 1rem;
             }
         }
     }
